--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chai": "^4.2.0",
     "chromedriver": "^79.0.3",
+    "dotenv": "^8.2.0",
     "mocha": "^7.0.1",
     "selenium-webdriver": "^4.0.0-alpha.5"
   }
